<resources>
    <string name="app_name">Story App</string>
    <string name="more_menu">More Menu</string>
    <string name="log_out">Log Out</string>
    <string name="create_new_story">create new story</string>
    <string name="image_detail">Image detail</string>
    <string name="map">Map</string>
    <string name="retry">Retry</string>
    <string name="data_not_loaded">Data not loaded</string>
    <string name="photo_preview">Photo</string>
    <string name="user_name_preview">username</string>
    <string name="capture_desc">take photo</string>
    <string name="switch_camera_desc">switch camera</string>
    <string name="camera_btn_text">Camera</string>
    <string name="gallery_btn_text">Gallery</string>
    <string name="submit_btn_text">Submit</string>
    <string name="preview_image_desc">preview image</string>
    <string name="description_hint">Description</string>
    <string name="name_tv_preview">name</string>
    <string name="description_txt_preview">description</string>
    <string name="image_iv_preview">preview image</string>
    <string name="login_tv_text">Login</string>
    <string name="login_btn_text">Login</string>
    <string name="e_mail_hint">E-Mail</string>
    <string name="password_hint">Password</string>
    <string name="register_link_text">Register?</string>
    <string name="create_account_tv_text">Create Account</string>
    <string name="register_btn_text">Register</string>
    <string name="name_hint">Name</string>
    <string name="login_link_text">Login?</string>
    <string name="story_description_preview">description</string>
    <string name="error_login">Email or password is not valid or your network is unstable</string>
    <string name="error_register">Please enter your name, email and password correctly or your network is unstable</string>
    <string name="register_failed">Registration failed</string>
    <string name="register_success">Registration is successful, please login!</string>
    <string name="error_password">Password is too short</string>
    <string name="permissions_not_granted">permission is not granted</string>
    <string name="take_photo_failed">Failed to take picture</string>
    <string name="camera_failed">Failed to launch the camera</string>
    <string name="mandatory_desc">Please enter a picture description first</string>
    <string name="mandatory_image">Please insert an image file first</string>
    <string name="email_empty">Please enter e-mail</string>
    <string name="password_empty">Please enter password</string>
    <string name="settings_title">Setting</string>
    <string name="night_mode_label">Night Mode</string>
    <string name="language_label">Language</string>
    <string name="add_location_text">Add current location</string>
    <string name="title_activity_maps">Story Maps</string>
    <string name="menu_maps">Maps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>