<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/action_maps_menu"
            android:title="@string/menu_maps"
            android:icon = "@drawable/ic_map_white"
            app:showAsAction="always"/>
        <item
            android:id="@+id/action_more_menu"
            android:icon="@drawable/ic_more_vertical"
            android:title="@string/more_menu"
            app:showAsAction="ifRoom">
            <menu>
                <item
                    android:id="@+id/action_setting_menu"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings_title"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_logout_menu"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/log_out"
                    app:showAsAction="never" />
            </menu>
        </item>
    </group>
</menu>