<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.createstory.CreateStoryFragment">

        <Button
            android:id="@+id/bt_open_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/camera_btn_text"
            app:layout_constraintBottom_toTopOf="@+id/button_add"
            app:layout_constraintEnd_toStartOf="@+id/bt_open_gallery"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bt_open_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/gallery_btn_text"
            app:layout_constraintBottom_toBottomOf="@+id/bt_open_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_open_camera"
            app:layout_constraintTop_toTopOf="@+id/bt_open_camera" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/submit_btn_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_image_preview"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toTopOf="@+id/ed_add_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_photo"
            android:contentDescription="@string/preview_image_desc" />

        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/description_hint"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/cb_add_location"
            app:layout_constraintEnd_toEndOf="@+id/button_add"
            app:layout_constraintStart_toStartOf="@+id/button_add" />

        <CheckBox
            android:id="@+id/cb_add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_location_text"
            app:layout_constraintBottom_toTopOf="@+id/bt_open_camera"
            app:layout_constraintStart_toStartOf="@+id/button_add" />

        <ProgressBar
            android:id="@+id/pb_create_story"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>