<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="15dp"
    android:layout_marginHorizontal="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/photo_preview" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="15dp"
            android:layout_below="@+id/iv_item_photo"
            android:text="@string/user_name_preview"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_item_desc"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="15dp"
            android:layout_below="@+id/tv_item_name"
            android:text="@string/story_description_preview"
            android:textSize="12sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
