<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="story"
            type="com.whyaji.storyapp.data.remote.response.ListStoryItem" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp">

            <ImageView
                android:id="@+id/iv_detail_photo"
                android:transitionName="shared_photo"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="50dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_iv_preview" />

            <TextView
                android:id="@+id/tv_detail_name"
                android:transitionName="shared_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="25dp"
                android:text="@string/name_tv_preview"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_detail_description"
                android:transitionName="shared_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_txt_preview"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</layout>
